sdk-docs_versioned_docs/version-29.0.x/types/variables/TxTags.mdx
---
sidebar_label: "TxTags"
---

# Variable: TxTags

> `const` **TxTags**: `object`

Defined in: node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:848

## Type declaration

<table>
<thead>
<tr>
<th>Name</th>
<th>Type</th>
<th>Defined in</th>
</tr>
</thead>
<tbody>
<tr>
<td>

<a id="asset"></a> `asset`

</td>
<td>

*typeof* [`AssetTx`](../enumerations/AssetTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:870

</td>
</tr>
<tr>
<td>

<a id="authorship"></a> `authorship`

</td>
<td>

*typeof* [`AuthorshipTx`](../enumerations/AuthorshipTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:853

</td>
</tr>
<tr>
<td>

<a id="babe"></a> `babe`

</td>
<td>

*typeof* [`BabeTx`](../enumerations/BabeTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:850

</td>
</tr>
<tr>
<td>

<a id="balances"></a> `balances`

</td>
<td>

*typeof* [`BalancesTx`](../enumerations/BalancesTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:854

</td>
</tr>
<tr>
<td>

<a id="bridge"></a> `bridge`

</td>
<td>

*typeof* [`BridgeTx`](../enumerations/BridgeTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:864

</td>
</tr>
<tr>
<td>

<a id="capitaldistribution"></a> `capitalDistribution`

</td>
<td>

*typeof* [`CapitalDistributionTx`](../enumerations/CapitalDistributionTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:871

</td>
</tr>
<tr>
<td>

<a id="cddserviceproviders"></a> `cddServiceProviders`

</td>
<td>

*typeof* [`CddServiceProvidersTx`](../enumerations/CddServiceProvidersTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:856

</td>
</tr>
<tr>
<td>

<a id="checkpoint"></a> `checkpoint`

</td>
<td>

*typeof* [`CheckpointTx`](../enumerations/CheckpointTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:872

</td>
</tr>
<tr>
<td>

<a id="committeemembership"></a> `committeeMembership`

</td>
<td>

*typeof* [`CommitteeMembershipTx`](../enumerations/CommitteeMembershipTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:858

</td>
</tr>
<tr>
<td>

<a id="compliancemanager"></a> `complianceManager`

</td>
<td>

*typeof* [`ComplianceManagerTx`](../enumerations/ComplianceManagerTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:873

</td>
</tr>
<tr>
<td>

<a id="contracts"></a> `contracts`

</td>
<td>

*typeof* [`ContractsTx`](../enumerations/ContractsTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:891

</td>
</tr>
<tr>
<td>

<a id="corporateaction"></a> `corporateAction`

</td>
<td>

*typeof* [`CorporateActionTx`](../enumerations/CorporateActionTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:874

</td>
</tr>
<tr>
<td>

<a id="corporateballot"></a> `corporateBallot`

</td>
<td>

*typeof* [`CorporateBallotTx`](../enumerations/CorporateBallotTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:875

</td>
</tr>
<tr>
<td>

<a id="electionprovidermultiphase"></a> `electionProviderMultiPhase`

</td>
<td>

*typeof* [`ElectionProviderMultiPhaseTx`](../enumerations/ElectionProviderMultiPhaseTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:894

</td>
</tr>
<tr>
<td>

<a id="externalagents"></a> `externalAgents`

</td>
<td>

*typeof* [`ExternalAgentsTx`](../enumerations/ExternalAgentsTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:885

</td>
</tr>
<tr>
<td>

<a id="grandpa"></a> `grandpa`

</td>
<td>

*typeof* [`GrandpaTx`](../enumerations/GrandpaTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:867

</td>
</tr>
<tr>
<td>

<a id="identity"></a> `identity`

</td>
<td>

*typeof* [`IdentityTx`](../enumerations/IdentityTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:855

</td>
</tr>
<tr>
<td>

<a id="imonline"></a> `imOnline`

</td>
<td>

*typeof* [`ImOnlineTx`](../enumerations/ImOnlineTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:868

</td>
</tr>
<tr>
<td>

<a id="indices"></a> `indices`

</td>
<td>

*typeof* [`IndicesTx`](../enumerations/IndicesTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:852

</td>
</tr>
<tr>
<td>

<a id="multisig"></a> `multiSig`

</td>
<td>

*typeof* [`MultiSigTx`](../enumerations/MultiSigTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:863

</td>
</tr>
<tr>
<td>

<a id="nft"></a> `nft`

</td>
<td>

*typeof* [`NftTx`](../enumerations/NftTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:892

</td>
</tr>
<tr>
<td>

<a id="pips"></a> `pips`

</td>
<td>

*typeof* [`PipsTx`](../enumerations/PipsTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:876

</td>
</tr>
<tr>
<td>

<a id="polymeshcommittee"></a> `polymeshCommittee`

</td>
<td>

*typeof* [`PolymeshCommitteeTx`](../enumerations/PolymeshCommitteeTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:857

</td>
</tr>
<tr>
<td>

<a id="polymeshcontracts"></a> `polymeshContracts`

</td>
<td>

*typeof* [`PolymeshContractsTx`](../enumerations/PolymeshContractsTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:889

</td>
</tr>
<tr>
<td>

<a id="portfolio"></a> `portfolio`

</td>
<td>

*typeof* [`PortfolioTx`](../enumerations/PortfolioTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:877

</td>
</tr>
<tr>
<td>

<a id="preimage"></a> `preimage`

</td>
<td>

*typeof* [`PreimageTx`](../enumerations/PreimageTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:890

</td>
</tr>
<tr>
<td>

<a id="protocolfee"></a> `protocolFee`

</td>
<td>

*typeof* [`ProtocolFeeTx`](../enumerations/ProtocolFeeTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:878

</td>
</tr>
<tr>
<td>

<a id="relayer"></a> `relayer`

</td>
<td>

*typeof* [`RelayerTx`](../enumerations/RelayerTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:886

</td>
</tr>
<tr>
<td>

<a id="rewards"></a> `rewards`

</td>
<td>

*typeof* [`RewardsTx`](../enumerations/RewardsTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:887

</td>
</tr>
<tr>
<td>

<a id="scheduler"></a> `scheduler`

</td>
<td>

*typeof* [`SchedulerTx`](../enumerations/SchedulerTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:879

</td>
</tr>
<tr>
<td>

<a id="session"></a> `session`

</td>
<td>

*typeof* [`SessionTx`](../enumerations/SessionTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:866

</td>
</tr>
<tr>
<td>

<a id="settlement"></a> `settlement`

</td>
<td>

*typeof* [`SettlementTx`](../enumerations/SettlementTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:880

</td>
</tr>
<tr>
<td>

<a id="staking"></a> `staking`

</td>
<td>

*typeof* [`StakingTx`](../enumerations/StakingTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:865

</td>
</tr>
<tr>
<td>

<a id="statetriemigration"></a> `stateTrieMigration`

</td>
<td>

*typeof* [`StateTrieMigrationTx`](../enumerations/StateTrieMigrationTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:893

</td>
</tr>
<tr>
<td>

<a id="statistics"></a> `statistics`

</td>
<td>

*typeof* [`StatisticsTx`](../enumerations/StatisticsTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:881

</td>
</tr>
<tr>
<td>

<a id="sto"></a> `sto`

</td>
<td>

*typeof* [`StoTx`](../enumerations/StoTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:882

</td>
</tr>
<tr>
<td>

<a id="sudo"></a> `sudo`

</td>
<td>

*typeof* [`SudoTx`](../enumerations/SudoTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:869

</td>
</tr>
<tr>
<td>

<a id="system"></a> `system`

</td>
<td>

*typeof* [`SystemTx`](../enumerations/SystemTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:849

</td>
</tr>
<tr>
<td>

<a id="technicalcommittee"></a> `technicalCommittee`

</td>
<td>

*typeof* [`TechnicalCommitteeTx`](../enumerations/TechnicalCommitteeTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:859

</td>
</tr>
<tr>
<td>

<a id="technicalcommitteemembership"></a> `technicalCommitteeMembership`

</td>
<td>

*typeof* [`TechnicalCommitteeMembershipTx`](../enumerations/TechnicalCommitteeMembershipTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:860

</td>
</tr>
<tr>
<td>

<a id="testutils"></a> `testUtils`

</td>
<td>

*typeof* [`TestUtilsTx`](../enumerations/TestUtilsTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:888

</td>
</tr>
<tr>
<td>

<a id="timestamp"></a> `timestamp`

</td>
<td>

*typeof* [`TimestampTx`](../enumerations/TimestampTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:851

</td>
</tr>
<tr>
<td>

<a id="transactionpayment"></a> `transactionPayment`

</td>
<td>

*typeof* [`TransactionPaymentTx`](../enumerations/TransactionPaymentTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:895

</td>
</tr>
<tr>
<td>

<a id="treasury"></a> `treasury`

</td>
<td>

*typeof* [`TreasuryTx`](../enumerations/TreasuryTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:883

</td>
</tr>
<tr>
<td>

<a id="upgradecommittee"></a> `upgradeCommittee`

</td>
<td>

*typeof* [`UpgradeCommitteeTx`](../enumerations/UpgradeCommitteeTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:861

</td>
</tr>
<tr>
<td>

<a id="upgradecommitteemembership"></a> `upgradeCommitteeMembership`

</td>
<td>

*typeof* [`UpgradeCommitteeMembershipTx`](../enumerations/UpgradeCommitteeMembershipTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:862

</td>
</tr>
<tr>
<td>

<a id="utility"></a> `utility`

</td>
<td>

*typeof* [`UtilityTx`](../enumerations/UtilityTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:884

</td>
</tr>
</tbody>
</table>
