sdk-docs_versioned_docs/version-30.0.x/types/variables/TxTags.mdx
---
sidebar_label: "TxTags"
---

# Variable: TxTags

> `const` **TxTags**: `object`

Defined in: node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:969

## Type Declaration

<table>
<thead>
<tr>
<th>Name</th>
<th>Type</th>
<th>Defined in</th>
</tr>
</thead>
<tbody>
<tr>
<td>

<a id="property-asset"></a> `asset`

</td>
<td>

*typeof* [`AssetTx`](../enumerations/AssetTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:991

</td>
</tr>
<tr>
<td>

<a id="property-authorship"></a> `authorship`

</td>
<td>

*typeof* [`AuthorshipTx`](../enumerations/AuthorshipTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:974

</td>
</tr>
<tr>
<td>

<a id="property-babe"></a> `babe`

</td>
<td>

*typeof* [`BabeTx`](../enumerations/BabeTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:971

</td>
</tr>
<tr>
<td>

<a id="property-balances"></a> `balances`

</td>
<td>

*typeof* [`BalancesTx`](../enumerations/BalancesTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:975

</td>
</tr>
<tr>
<td>

<a id="property-beefy"></a> `beefy`

</td>
<td>

*typeof* [`BeefyTx`](../enumerations/BeefyTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:1020

</td>
</tr>
<tr>
<td>

<a id="property-bridge"></a> `bridge`

</td>
<td>

*typeof* [`BridgeTx`](../enumerations/BridgeTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:985

</td>
</tr>
<tr>
<td>

<a id="property-capitaldistribution"></a> `capitalDistribution`

</td>
<td>

*typeof* [`CapitalDistributionTx`](../enumerations/CapitalDistributionTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:992

</td>
</tr>
<tr>
<td>

<a id="property-cddserviceproviders"></a> `cddServiceProviders`

</td>
<td>

*typeof* [`CddServiceProvidersTx`](../enumerations/CddServiceProvidersTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:977

</td>
</tr>
<tr>
<td>

<a id="property-checkpoint"></a> `checkpoint`

</td>
<td>

*typeof* [`CheckpointTx`](../enumerations/CheckpointTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:993

</td>
</tr>
<tr>
<td>

<a id="property-committeemembership"></a> `committeeMembership`

</td>
<td>

*typeof* [`CommitteeMembershipTx`](../enumerations/CommitteeMembershipTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:979

</td>
</tr>
<tr>
<td>

<a id="property-compliancemanager"></a> `complianceManager`

</td>
<td>

*typeof* [`ComplianceManagerTx`](../enumerations/ComplianceManagerTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:994

</td>
</tr>
<tr>
<td>

<a id="property-confidentialassets"></a> `confidentialAssets`

</td>
<td>

*typeof* [`ConfidentialAssetsTx`](../enumerations/ConfidentialAssetsTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:1023

</td>
</tr>
<tr>
<td>

<a id="property-contracts"></a> `contracts`

</td>
<td>

*typeof* [`ContractsTx`](../enumerations/ContractsTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:1012

</td>
</tr>
<tr>
<td>

<a id="property-corporateaction"></a> `corporateAction`

</td>
<td>

*typeof* [`CorporateActionTx`](../enumerations/CorporateActionTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:995

</td>
</tr>
<tr>
<td>

<a id="property-corporateballot"></a> `corporateBallot`

</td>
<td>

*typeof* [`CorporateBallotTx`](../enumerations/CorporateBallotTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:996

</td>
</tr>
<tr>
<td>

<a id="property-didregistrars"></a> `didRegistrars`

</td>
<td>

*typeof* [`DidRegistrarsTx`](../enumerations/DidRegistrarsTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:1018

</td>
</tr>
<tr>
<td>

<a id="property-electionprovidermultiphase"></a> `electionProviderMultiPhase`

</td>
<td>

*typeof* [`ElectionProviderMultiPhaseTx`](../enumerations/ElectionProviderMultiPhaseTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:1015

</td>
</tr>
<tr>
<td>

<a id="property-externalagents"></a> `externalAgents`

</td>
<td>

*typeof* [`ExternalAgentsTx`](../enumerations/ExternalAgentsTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:1006

</td>
</tr>
<tr>
<td>

<a id="property-grandpa"></a> `grandpa`

</td>
<td>

*typeof* [`GrandpaTx`](../enumerations/GrandpaTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:988

</td>
</tr>
<tr>
<td>

<a id="property-identity"></a> `identity`

</td>
<td>

*typeof* [`IdentityTx`](../enumerations/IdentityTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:976

</td>
</tr>
<tr>
<td>

<a id="property-imonline"></a> `imOnline`

</td>
<td>

*typeof* [`ImOnlineTx`](../enumerations/ImOnlineTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:989

</td>
</tr>
<tr>
<td>

<a id="property-indices"></a> `indices`

</td>
<td>

*typeof* [`IndicesTx`](../enumerations/IndicesTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:973

</td>
</tr>
<tr>
<td>

<a id="property-multiblockmigrations"></a> `multiBlockMigrations`

</td>
<td>

*typeof* [`MultiBlockMigrationsTx`](../enumerations/MultiBlockMigrationsTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:1022

</td>
</tr>
<tr>
<td>

<a id="property-multisig"></a> `multiSig`

</td>
<td>

*typeof* [`MultiSigTx`](../enumerations/MultiSigTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:984

</td>
</tr>
<tr>
<td>

<a id="property-nft"></a> `nft`

</td>
<td>

*typeof* [`NftTx`](../enumerations/NftTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:1013

</td>
</tr>
<tr>
<td>

<a id="property-pips"></a> `pips`

</td>
<td>

*typeof* [`PipsTx`](../enumerations/PipsTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:997

</td>
</tr>
<tr>
<td>

<a id="property-polymeshcommittee"></a> `polymeshCommittee`

</td>
<td>

*typeof* [`PolymeshCommitteeTx`](../enumerations/PolymeshCommitteeTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:978

</td>
</tr>
<tr>
<td>

<a id="property-polymeshcontracts"></a> `polymeshContracts`

</td>
<td>

*typeof* [`PolymeshContractsTx`](../enumerations/PolymeshContractsTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:1010

</td>
</tr>
<tr>
<td>

<a id="property-polymeshtransactionpayment"></a> `polymeshTransactionPayment`

</td>
<td>

*typeof* [`PolymeshTransactionPaymentTx`](../enumerations/PolymeshTransactionPaymentTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:1019

</td>
</tr>
<tr>
<td>

<a id="property-portfolio"></a> `portfolio`

</td>
<td>

*typeof* [`PortfolioTx`](../enumerations/PortfolioTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:998

</td>
</tr>
<tr>
<td>

<a id="property-preimage"></a> `preimage`

</td>
<td>

*typeof* [`PreimageTx`](../enumerations/PreimageTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:1011

</td>
</tr>
<tr>
<td>

<a id="property-protocolfee"></a> `protocolFee`

</td>
<td>

*typeof* [`ProtocolFeeTx`](../enumerations/ProtocolFeeTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:999

</td>
</tr>
<tr>
<td>

<a id="property-relayer"></a> `relayer`

</td>
<td>

*typeof* [`RelayerTx`](../enumerations/RelayerTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:1007

</td>
</tr>
<tr>
<td>

<a id="property-revive"></a> `revive`

</td>
<td>

*typeof* [`ReviveTx`](../enumerations/ReviveTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:1021

</td>
</tr>
<tr>
<td>

<a id="property-rewards"></a> `rewards`

</td>
<td>

*typeof* [`RewardsTx`](../enumerations/RewardsTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:1008

</td>
</tr>
<tr>
<td>

<a id="property-scheduler"></a> `scheduler`

</td>
<td>

*typeof* [`SchedulerTx`](../enumerations/SchedulerTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:1000

</td>
</tr>
<tr>
<td>

<a id="property-session"></a> `session`

</td>
<td>

*typeof* [`SessionTx`](../enumerations/SessionTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:987

</td>
</tr>
<tr>
<td>

<a id="property-settlement"></a> `settlement`

</td>
<td>

*typeof* [`SettlementTx`](../enumerations/SettlementTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:1001

</td>
</tr>
<tr>
<td>

<a id="property-staking"></a> `staking`

</td>
<td>

*typeof* [`StakingTx`](../enumerations/StakingTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:986

</td>
</tr>
<tr>
<td>

<a id="property-statetriemigration"></a> `stateTrieMigration`

</td>
<td>

*typeof* [`StateTrieMigrationTx`](../enumerations/StateTrieMigrationTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:1014

</td>
</tr>
<tr>
<td>

<a id="property-statistics"></a> `statistics`

</td>
<td>

*typeof* [`StatisticsTx`](../enumerations/StatisticsTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:1002

</td>
</tr>
<tr>
<td>

<a id="property-sto"></a> `sto`

</td>
<td>

*typeof* [`StoTx`](../enumerations/StoTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:1003

</td>
</tr>
<tr>
<td>

<a id="property-sudo"></a> `sudo`

</td>
<td>

*typeof* [`SudoTx`](../enumerations/SudoTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:990

</td>
</tr>
<tr>
<td>

<a id="property-system"></a> `system`

</td>
<td>

*typeof* [`SystemTx`](../enumerations/SystemTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:970

</td>
</tr>
<tr>
<td>

<a id="property-technicalcommittee"></a> `technicalCommittee`

</td>
<td>

*typeof* [`TechnicalCommitteeTx`](../enumerations/TechnicalCommitteeTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:980

</td>
</tr>
<tr>
<td>

<a id="property-technicalcommitteemembership"></a> `technicalCommitteeMembership`

</td>
<td>

*typeof* [`TechnicalCommitteeMembershipTx`](../enumerations/TechnicalCommitteeMembershipTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:981

</td>
</tr>
<tr>
<td>

<a id="property-testutils"></a> `testUtils`

</td>
<td>

*typeof* [`TestUtilsTx`](../enumerations/TestUtilsTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:1009

</td>
</tr>
<tr>
<td>

<a id="property-timestamp"></a> `timestamp`

</td>
<td>

*typeof* [`TimestampTx`](../enumerations/TimestampTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:972

</td>
</tr>
<tr>
<td>

<a id="property-transactionpayment"></a> `transactionPayment`

</td>
<td>

*typeof* [`TransactionPaymentTx`](../enumerations/TransactionPaymentTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:1016

</td>
</tr>
<tr>
<td>

<a id="property-treasury"></a> `treasury`

</td>
<td>

*typeof* [`TreasuryTx`](../enumerations/TreasuryTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:1004

</td>
</tr>
<tr>
<td>

<a id="property-upgradecommittee"></a> `upgradeCommittee`

</td>
<td>

*typeof* [`UpgradeCommitteeTx`](../enumerations/UpgradeCommitteeTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:982

</td>
</tr>
<tr>
<td>

<a id="property-upgradecommitteemembership"></a> `upgradeCommitteeMembership`

</td>
<td>

*typeof* [`UpgradeCommitteeMembershipTx`](../enumerations/UpgradeCommitteeMembershipTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:983

</td>
</tr>
<tr>
<td>

<a id="property-utility"></a> `utility`

</td>
<td>

*typeof* [`UtilityTx`](../enumerations/UtilityTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:1005

</td>
</tr>
<tr>
<td>

<a id="property-validators"></a> `validators`

</td>
<td>

*typeof* [`ValidatorsTx`](../enumerations/ValidatorsTx.mdx)

</td>
<td>

node\_modules/@polymeshassociation/polymesh-types/generated/types.d.ts:1017

</td>
</tr>
</tbody>
</table>
